[gd_scene load_steps=4 format=3 uid="uid://btlubd0wqixut"]

[ext_resource type="Texture2D" uid="uid://brbwgupq832jq" path="res://ui/tablon_de_madera.png" id="1_6t4iw"]
[ext_resource type="Script" uid="uid://tb0vw3fnemb4" path="res://scenes/PlayerNameDisplay.gd" id="1_msypb"]
[ext_resource type="Texture2D" uid="uid://fbus5hk5n115" path="res://ui/crown_pixel_art.png" id="3_rnx7d"]

[node name="PlayerNameDisplay" type="Node2D"]
script = ExtResource("1_msypb")
highlightedColor = Color(0.330442, 0.730931, 0.368619, 1)

[node name="TablonDeMadera" type="Sprite2D" parent="."]
position = Vector2(85.125, 23)
scale = Vector2(0.135254, 0.0830078)
texture = ExtResource("1_6t4iw")

[node name="CrownPixelArt" type="Sprite2D" parent="."]
position = Vector2(130, 24)
scale = Vector2(0.0400389, 0.0302734)
texture = ExtResource("3_rnx7d")

[node name="PlayerNameLabel" type="Label" parent="."]
offset_left = 17.0
offset_top = 13.0
offset_right = 112.0
offset_bottom = 36.0
text = "PlayerName"
